<resources>
    <string name="app_name">"My Github User's"</string>

    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>

    <string name="title_detail">Detail User</string>
    <string name="title_main">"GitHub User's"</string>
    <string name="title_setting">Setting</string>
    <string name="title_favorite">"Favorite User"</string>

    <string name="added">Ditambahkan ke favorite</string>
    <string name="deleted">Dihapus dari favorite</string>
    <string name="addedFail">GAGAL menambahkan ke favorit, silahkan ulangi lagi</string>
    <string name="deletedFail">GAGAL menghapus dari favorit, silahkan ulangi lagi</string>

    <string name="notFavoriteYet">Belum ada data</string>
    <string name="noFollowers">Followers tidak ada</string>
    <string name="noFollowing">Following tidak ada</string>

    <string name="users_name">Nama User</string>
    <string name="users_username">Username</string>
    <string name="users_companies">Company</string>
    <string name="users_location">Location</string>
    <string name="name_received">Nama</string>
    <string name="username_received">Username</string>
    <string name="company_received">Company</string>
    <string name="follower_received">00000</string>
    <string name="followers">followers</string>
    <string name="following_received">00</string>
    <string name="following">following</string>
    <string name="location_received">Location</string>
    <string name="repositories">Repositories</string>
    <string name="repository_received">0000</string>
    <string name="version">v.1.0</string>
    <string name="icon">Icon</string>
    <string name="logo">Logo</string>
    <string name="logo_text">Logo Text</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="menu_1">favorite</string>
    <string name="menu_2">setting</string>
</resources>